asm/src/parser.output
Grammar

    0 $accept: program T_EOF

    1 program: statements

    2 arguments_helper: arguments_helper T_COMMA number
    3                 | number

    4 arguments: arguments_helper
    5          | %empty

    6 assignment: T_IDENTIFIER T_EQUAL expression

    7 directive: T_MACRO T_IDENTIFIER T_LPAREN arguments T_RPAREN T_LBRACE statements T_RBRACE
    8          | T_ORIGIN number
    9          | T_ALIAS assignment
   10          | T_VAR assignment
   11          | T_ASCII T_STRING

   12 number: T_INT
   13       | T_IDENTIFIER

   14 paren_expr: T_LPAREN expression T_RPAREN
   15           | T_LBRACK expression T_RBRACK

   16 expression: imm
   17           | mem
   18           | number
   19           | paren_expr
   20           | expression T_PLUS expression
   21           | expression T_MINUS expression
   22           | expression T_TIMES expression
   23           | expression T_DIVIDE expression
   24           | expression T_LSHIFT expression
   25           | expression T_RSHIFT expression
   26           | expression T_CARET expression

   27 label: T_IDENTIFIER T_COLON

   28 operand: imm
   29        | mem
   30        | T_REGISTER

   31 instruction: T_IDENTIFIER
   32            | T_IDENTIFIER operand
   33            | T_IDENTIFIER operand T_COMMA operand

   34 statement: instruction
   35          | directive
   36          | label

   37 statement_with_endl: statement T_ENDL
   38                    | statement T_EOF
   39                    | T_ENDL

   40 statements: statements statement_with_endl
   41           | %empty

   42 imm: T_HASH number
   43    | T_HASH paren_expr

   44 mem: T_PERCENT number
   45    | T_PERCENT paren_expr


Terminals, with rules where they appear

    T_EOF (0) 0 38
    error (256)
    T_ENDL (258) 37 39
    T_INT <ival> (259) 12
    T_REGISTER <ival> (260) 30
    T_IDENTIFIER <sval> (261) 6 7 13 27 31 32 33
    T_STRING <sval> (262) 11
    T_PLUS (263) 20
    T_MINUS (264) 21
    T_TIMES (265) 22
    T_DIVIDE (266) 23
    T_LSHIFT (267) 24
    T_RSHIFT (268) 25
    T_COMMA (269) 2 33
    T_COLON (270) 27
    T_LPAREN (271) 7 14
    T_RPAREN (272) 7 14
    T_LBRACE (273) 7
    T_RBRACE (274) 7
    T_LBRACK (275) 15
    T_RBRACK (276) 15
    T_EQUAL (277) 6
    T_HASH (278) 42 43
    T_PERCENT (279) 44 45
    T_ALIAS (280) 9
    T_ORIGIN (281) 8
    T_MACRO (282) 7
    T_VAR (283) 10
    T_ASCII (284) 11
    T_CARET (285) 26


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    program (32)
        on left: 1
        on right: 0
    arguments_helper (33)
        on left: 2 3
        on right: 2 4
    arguments (34)
        on left: 4 5
        on right: 7
    assignment (35)
        on left: 6
        on right: 9 10
    directive (36)
        on left: 7 8 9 10 11
        on right: 35
    number (37)
        on left: 12 13
        on right: 2 3 8 18 42 44
    paren_expr (38)
        on left: 14 15
        on right: 19 43 45
    expression (39)
        on left: 16 17 18 19 20 21 22 23 24 25 26
        on right: 6 14 15 20 21 22 23 24 25 26
    label (40)
        on left: 27
        on right: 36
    operand (41)
        on left: 28 29 30
        on right: 32 33
    instruction (42)
        on left: 31 32 33
        on right: 34
    statement (43)
        on left: 34 35 36
        on right: 37 38
    statement_with_endl (44)
        on left: 37 38 39
        on right: 40
    statements (45)
        on left: 40 41
        on right: 1 7 40
    imm (46)
        on left: 42 43
        on right: 16 28
    mem (47)
        on left: 44 45
        on right: 17 29


State 0

    0 $accept: . program T_EOF

    $default  reduce using rule 41 (statements)

    program     go to state 1
    statements  go to state 2


State 1

    0 $accept: program . T_EOF

    T_EOF  shift, and go to state 3


State 2

    1 program: statements .
   40 statements: statements . statement_with_endl

    T_ENDL        shift, and go to state 4
    T_IDENTIFIER  shift, and go to state 5
    T_ALIAS       shift, and go to state 6
    T_ORIGIN      shift, and go to state 7
    T_MACRO       shift, and go to state 8
    T_VAR         shift, and go to state 9
    T_ASCII       shift, and go to state 10

    $default  reduce using rule 1 (program)

    directive            go to state 11
    label                go to state 12
    instruction          go to state 13
    statement            go to state 14
    statement_with_endl  go to state 15


State 3

    0 $accept: program T_EOF .

    $default  accept


State 4

   39 statement_with_endl: T_ENDL .

    $default  reduce using rule 39 (statement_with_endl)


State 5

   27 label: T_IDENTIFIER . T_COLON
   31 instruction: T_IDENTIFIER .
   32            | T_IDENTIFIER . operand
   33            | T_IDENTIFIER . operand T_COMMA operand

    T_REGISTER  shift, and go to state 16
    T_COLON     shift, and go to state 17
    T_HASH      shift, and go to state 18
    T_PERCENT   shift, and go to state 19

    $default  reduce using rule 31 (instruction)

    operand  go to state 20
    imm      go to state 21
    mem      go to state 22


State 6

    9 directive: T_ALIAS . assignment

    T_IDENTIFIER  shift, and go to state 23

    assignment  go to state 24


State 7

    8 directive: T_ORIGIN . number

    T_INT         shift, and go to state 25
    T_IDENTIFIER  shift, and go to state 26

    number  go to state 27


State 8

    7 directive: T_MACRO . T_IDENTIFIER T_LPAREN arguments T_RPAREN T_LBRACE statements T_RBRACE

    T_IDENTIFIER  shift, and go to state 28


State 9

   10 directive: T_VAR . assignment

    T_IDENTIFIER  shift, and go to state 23

    assignment  go to state 29


State 10

   11 directive: T_ASCII . T_STRING

    T_STRING  shift, and go to state 30


State 11

   35 statement: directive .

    $default  reduce using rule 35 (statement)


State 12

   36 statement: label .

    $default  reduce using rule 36 (statement)


State 13

   34 statement: instruction .

    $default  reduce using rule 34 (statement)


State 14

   37 statement_with_endl: statement . T_ENDL
   38                    | statement . T_EOF

    T_EOF   shift, and go to state 31
    T_ENDL  shift, and go to state 32


State 15

   40 statements: statements statement_with_endl .

    $default  reduce using rule 40 (statements)


State 16

   30 operand: T_REGISTER .

    $default  reduce using rule 30 (operand)


State 17

   27 label: T_IDENTIFIER T_COLON .

    $default  reduce using rule 27 (label)


State 18

   42 imm: T_HASH . number
   43    | T_HASH . paren_expr

    T_INT         shift, and go to state 25
    T_IDENTIFIER  shift, and go to state 26
    T_LPAREN      shift, and go to state 33
    T_LBRACK      shift, and go to state 34

    number      go to state 35
    paren_expr  go to state 36


State 19

   44 mem: T_PERCENT . number
   45    | T_PERCENT . paren_expr

    T_INT         shift, and go to state 25
    T_IDENTIFIER  shift, and go to state 26
    T_LPAREN      shift, and go to state 33
    T_LBRACK      shift, and go to state 34

    number      go to state 37
    paren_expr  go to state 38


State 20

   32 instruction: T_IDENTIFIER operand .
   33            | T_IDENTIFIER operand . T_COMMA operand

    T_COMMA  shift, and go to state 39

    $default  reduce using rule 32 (instruction)


State 21

   28 operand: imm .

    $default  reduce using rule 28 (operand)


State 22

   29 operand: mem .

    $default  reduce using rule 29 (operand)


State 23

    6 assignment: T_IDENTIFIER . T_EQUAL expression

    T_EQUAL  shift, and go to state 40


State 24

    9 directive: T_ALIAS assignment .

    $default  reduce using rule 9 (directive)


State 25

   12 number: T_INT .

    $default  reduce using rule 12 (number)


State 26

   13 number: T_IDENTIFIER .

    $default  reduce using rule 13 (number)


State 27

    8 directive: T_ORIGIN number .

    $default  reduce using rule 8 (directive)


State 28

    7 directive: T_MACRO T_IDENTIFIER . T_LPAREN arguments T_RPAREN T_LBRACE statements T_RBRACE

    T_LPAREN  shift, and go to state 41


State 29

   10 directive: T_VAR assignment .

    $default  reduce using rule 10 (directive)


State 30

   11 directive: T_ASCII T_STRING .

    $default  reduce using rule 11 (directive)


State 31

   38 statement_with_endl: statement T_EOF .

    $default  reduce using rule 38 (statement_with_endl)


State 32

   37 statement_with_endl: statement T_ENDL .

    $default  reduce using rule 37 (statement_with_endl)


State 33

   14 paren_expr: T_LPAREN . expression T_RPAREN

    T_INT         shift, and go to state 25
    T_IDENTIFIER  shift, and go to state 26
    T_LPAREN      shift, and go to state 33
    T_LBRACK      shift, and go to state 34
    T_HASH        shift, and go to state 18
    T_PERCENT     shift, and go to state 19

    number      go to state 42
    paren_expr  go to state 43
    expression  go to state 44
    imm         go to state 45
    mem         go to state 46


State 34

   15 paren_expr: T_LBRACK . expression T_RBRACK

    T_INT         shift, and go to state 25
    T_IDENTIFIER  shift, and go to state 26
    T_LPAREN      shift, and go to state 33
    T_LBRACK      shift, and go to state 34
    T_HASH        shift, and go to state 18
    T_PERCENT     shift, and go to state 19

    number      go to state 42
    paren_expr  go to state 43
    expression  go to state 47
    imm         go to state 45
    mem         go to state 46


State 35

   42 imm: T_HASH number .

    $default  reduce using rule 42 (imm)


State 36

   43 imm: T_HASH paren_expr .

    $default  reduce using rule 43 (imm)


State 37

   44 mem: T_PERCENT number .

    $default  reduce using rule 44 (mem)


State 38

   45 mem: T_PERCENT paren_expr .

    $default  reduce using rule 45 (mem)


State 39

   33 instruction: T_IDENTIFIER operand T_COMMA . operand

    T_REGISTER  shift, and go to state 16
    T_HASH      shift, and go to state 18
    T_PERCENT   shift, and go to state 19

    operand  go to state 48
    imm      go to state 21
    mem      go to state 22


State 40

    6 assignment: T_IDENTIFIER T_EQUAL . expression

    T_INT         shift, and go to state 25
    T_IDENTIFIER  shift, and go to state 26
    T_LPAREN      shift, and go to state 33
    T_LBRACK      shift, and go to state 34
    T_HASH        shift, and go to state 18
    T_PERCENT     shift, and go to state 19

    number      go to state 42
    paren_expr  go to state 43
    expression  go to state 49
    imm         go to state 45
    mem         go to state 46


State 41

    7 directive: T_MACRO T_IDENTIFIER T_LPAREN . arguments T_RPAREN T_LBRACE statements T_RBRACE

    T_INT         shift, and go to state 25
    T_IDENTIFIER  shift, and go to state 26

    $default  reduce using rule 5 (arguments)

    arguments_helper  go to state 50
    arguments         go to state 51
    number            go to state 52


State 42

   18 expression: number .

    $default  reduce using rule 18 (expression)


State 43

   19 expression: paren_expr .

    $default  reduce using rule 19 (expression)


State 44

   14 paren_expr: T_LPAREN expression . T_RPAREN
   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_TIMES expression
   23           | expression . T_DIVIDE expression
   24           | expression . T_LSHIFT expression
   25           | expression . T_RSHIFT expression
   26           | expression . T_CARET expression

    T_PLUS    shift, and go to state 53
    T_MINUS   shift, and go to state 54
    T_TIMES   shift, and go to state 55
    T_DIVIDE  shift, and go to state 56
    T_LSHIFT  shift, and go to state 57
    T_RSHIFT  shift, and go to state 58
    T_RPAREN  shift, and go to state 59
    T_CARET   shift, and go to state 60


State 45

   16 expression: imm .

    $default  reduce using rule 16 (expression)


State 46

   17 expression: mem .

    $default  reduce using rule 17 (expression)


State 47

   15 paren_expr: T_LBRACK expression . T_RBRACK
   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_TIMES expression
   23           | expression . T_DIVIDE expression
   24           | expression . T_LSHIFT expression
   25           | expression . T_RSHIFT expression
   26           | expression . T_CARET expression

    T_PLUS    shift, and go to state 53
    T_MINUS   shift, and go to state 54
    T_TIMES   shift, and go to state 55
    T_DIVIDE  shift, and go to state 56
    T_LSHIFT  shift, and go to state 57
    T_RSHIFT  shift, and go to state 58
    T_RBRACK  shift, and go to state 61
    T_CARET   shift, and go to state 60


State 48

   33 instruction: T_IDENTIFIER operand T_COMMA operand .

    $default  reduce using rule 33 (instruction)


State 49

    6 assignment: T_IDENTIFIER T_EQUAL expression .
   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_TIMES expression
   23           | expression . T_DIVIDE expression
   24           | expression . T_LSHIFT expression
   25           | expression . T_RSHIFT expression
   26           | expression . T_CARET expression

    T_PLUS    shift, and go to state 53
    T_MINUS   shift, and go to state 54
    T_TIMES   shift, and go to state 55
    T_DIVIDE  shift, and go to state 56
    T_LSHIFT  shift, and go to state 57
    T_RSHIFT  shift, and go to state 58
    T_CARET   shift, and go to state 60

    $default  reduce using rule 6 (assignment)


State 50

    2 arguments_helper: arguments_helper . T_COMMA number
    4 arguments: arguments_helper .

    T_COMMA  shift, and go to state 62

    $default  reduce using rule 4 (arguments)


State 51

    7 directive: T_MACRO T_IDENTIFIER T_LPAREN arguments . T_RPAREN T_LBRACE statements T_RBRACE

    T_RPAREN  shift, and go to state 63


State 52

    3 arguments_helper: number .

    $default  reduce using rule 3 (arguments_helper)


State 53

   20 expression: expression T_PLUS . expression

    T_INT         shift, and go to state 25
    T_IDENTIFIER  shift, and go to state 26
    T_LPAREN      shift, and go to state 33
    T_LBRACK      shift, and go to state 34
    T_HASH        shift, and go to state 18
    T_PERCENT     shift, and go to state 19

    number      go to state 42
    paren_expr  go to state 43
    expression  go to state 64
    imm         go to state 45
    mem         go to state 46


State 54

   21 expression: expression T_MINUS . expression

    T_INT         shift, and go to state 25
    T_IDENTIFIER  shift, and go to state 26
    T_LPAREN      shift, and go to state 33
    T_LBRACK      shift, and go to state 34
    T_HASH        shift, and go to state 18
    T_PERCENT     shift, and go to state 19

    number      go to state 42
    paren_expr  go to state 43
    expression  go to state 65
    imm         go to state 45
    mem         go to state 46


State 55

   22 expression: expression T_TIMES . expression

    T_INT         shift, and go to state 25
    T_IDENTIFIER  shift, and go to state 26
    T_LPAREN      shift, and go to state 33
    T_LBRACK      shift, and go to state 34
    T_HASH        shift, and go to state 18
    T_PERCENT     shift, and go to state 19

    number      go to state 42
    paren_expr  go to state 43
    expression  go to state 66
    imm         go to state 45
    mem         go to state 46


State 56

   23 expression: expression T_DIVIDE . expression

    T_INT         shift, and go to state 25
    T_IDENTIFIER  shift, and go to state 26
    T_LPAREN      shift, and go to state 33
    T_LBRACK      shift, and go to state 34
    T_HASH        shift, and go to state 18
    T_PERCENT     shift, and go to state 19

    number      go to state 42
    paren_expr  go to state 43
    expression  go to state 67
    imm         go to state 45
    mem         go to state 46


State 57

   24 expression: expression T_LSHIFT . expression

    T_INT         shift, and go to state 25
    T_IDENTIFIER  shift, and go to state 26
    T_LPAREN      shift, and go to state 33
    T_LBRACK      shift, and go to state 34
    T_HASH        shift, and go to state 18
    T_PERCENT     shift, and go to state 19

    number      go to state 42
    paren_expr  go to state 43
    expression  go to state 68
    imm         go to state 45
    mem         go to state 46


State 58

   25 expression: expression T_RSHIFT . expression

    T_INT         shift, and go to state 25
    T_IDENTIFIER  shift, and go to state 26
    T_LPAREN      shift, and go to state 33
    T_LBRACK      shift, and go to state 34
    T_HASH        shift, and go to state 18
    T_PERCENT     shift, and go to state 19

    number      go to state 42
    paren_expr  go to state 43
    expression  go to state 69
    imm         go to state 45
    mem         go to state 46


State 59

   14 paren_expr: T_LPAREN expression T_RPAREN .

    $default  reduce using rule 14 (paren_expr)


State 60

   26 expression: expression T_CARET . expression

    T_INT         shift, and go to state 25
    T_IDENTIFIER  shift, and go to state 26
    T_LPAREN      shift, and go to state 33
    T_LBRACK      shift, and go to state 34
    T_HASH        shift, and go to state 18
    T_PERCENT     shift, and go to state 19

    number      go to state 42
    paren_expr  go to state 43
    expression  go to state 70
    imm         go to state 45
    mem         go to state 46


State 61

   15 paren_expr: T_LBRACK expression T_RBRACK .

    $default  reduce using rule 15 (paren_expr)


State 62

    2 arguments_helper: arguments_helper T_COMMA . number

    T_INT         shift, and go to state 25
    T_IDENTIFIER  shift, and go to state 26

    number  go to state 71


State 63

    7 directive: T_MACRO T_IDENTIFIER T_LPAREN arguments T_RPAREN . T_LBRACE statements T_RBRACE

    T_LBRACE  shift, and go to state 72


State 64

   20 expression: expression . T_PLUS expression
   20           | expression T_PLUS expression .
   21           | expression . T_MINUS expression
   22           | expression . T_TIMES expression
   23           | expression . T_DIVIDE expression
   24           | expression . T_LSHIFT expression
   25           | expression . T_RSHIFT expression
   26           | expression . T_CARET expression

    T_TIMES   shift, and go to state 55
    T_DIVIDE  shift, and go to state 56
    T_LSHIFT  shift, and go to state 57
    T_RSHIFT  shift, and go to state 58
    T_CARET   shift, and go to state 60

    $default  reduce using rule 20 (expression)


State 65

   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   21           | expression T_MINUS expression .
   22           | expression . T_TIMES expression
   23           | expression . T_DIVIDE expression
   24           | expression . T_LSHIFT expression
   25           | expression . T_RSHIFT expression
   26           | expression . T_CARET expression

    T_TIMES   shift, and go to state 55
    T_DIVIDE  shift, and go to state 56
    T_LSHIFT  shift, and go to state 57
    T_RSHIFT  shift, and go to state 58
    T_CARET   shift, and go to state 60

    $default  reduce using rule 21 (expression)


State 66

   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_TIMES expression
   22           | expression T_TIMES expression .
   23           | expression . T_DIVIDE expression
   24           | expression . T_LSHIFT expression
   25           | expression . T_RSHIFT expression
   26           | expression . T_CARET expression

    T_LSHIFT  shift, and go to state 57
    T_RSHIFT  shift, and go to state 58
    T_CARET   shift, and go to state 60

    $default  reduce using rule 22 (expression)


State 67

   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_TIMES expression
   23           | expression . T_DIVIDE expression
   23           | expression T_DIVIDE expression .
   24           | expression . T_LSHIFT expression
   25           | expression . T_RSHIFT expression
   26           | expression . T_CARET expression

    T_LSHIFT  shift, and go to state 57
    T_RSHIFT  shift, and go to state 58
    T_CARET   shift, and go to state 60

    $default  reduce using rule 23 (expression)


State 68

   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_TIMES expression
   23           | expression . T_DIVIDE expression
   24           | expression . T_LSHIFT expression
   24           | expression T_LSHIFT expression .
   25           | expression . T_RSHIFT expression
   26           | expression . T_CARET expression

    T_CARET  shift, and go to state 60

    $default  reduce using rule 24 (expression)


State 69

   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_TIMES expression
   23           | expression . T_DIVIDE expression
   24           | expression . T_LSHIFT expression
   25           | expression . T_RSHIFT expression
   25           | expression T_RSHIFT expression .
   26           | expression . T_CARET expression

    T_CARET  shift, and go to state 60

    $default  reduce using rule 25 (expression)


State 70

   20 expression: expression . T_PLUS expression
   21           | expression . T_MINUS expression
   22           | expression . T_TIMES expression
   23           | expression . T_DIVIDE expression
   24           | expression . T_LSHIFT expression
   25           | expression . T_RSHIFT expression
   26           | expression . T_CARET expression
   26           | expression T_CARET expression .

    T_CARET  shift, and go to state 60

    $default  reduce using rule 26 (expression)


State 71

    2 arguments_helper: arguments_helper T_COMMA number .

    $default  reduce using rule 2 (arguments_helper)


State 72

    7 directive: T_MACRO T_IDENTIFIER T_LPAREN arguments T_RPAREN T_LBRACE . statements T_RBRACE

    $default  reduce using rule 41 (statements)

    statements  go to state 73


State 73

    7 directive: T_MACRO T_IDENTIFIER T_LPAREN arguments T_RPAREN T_LBRACE statements . T_RBRACE
   40 statements: statements . statement_with_endl

    T_ENDL        shift, and go to state 4
    T_IDENTIFIER  shift, and go to state 5
    T_RBRACE      shift, and go to state 74
    T_ALIAS       shift, and go to state 6
    T_ORIGIN      shift, and go to state 7
    T_MACRO       shift, and go to state 8
    T_VAR         shift, and go to state 9
    T_ASCII       shift, and go to state 10

    directive            go to state 11
    label                go to state 12
    instruction          go to state 13
    statement            go to state 14
    statement_with_endl  go to state 15


State 74

    7 directive: T_MACRO T_IDENTIFIER T_LPAREN arguments T_RPAREN T_LBRACE statements T_RBRACE .

    $default  reduce using rule 7 (directive)
